--- a/app/globals.css
+++ b/app/globals.css
@@ -99,4 +99,10 @@ body {
     white-space: nowrap;
     /* Prevents text from wrapping */
   }
+  nav {
+    user-select: none !important;
+    -moz-user-select: none !important;
+    -webkit-user-select: none !important;
+    -ms-user-select: none !important;
+  }
 }
